<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cetsoft</groupId>
	<version>0.2.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>imcache</name>
	<artifactId>imcache-parent</artifactId>
	<url>http://github.com/Cetsoft/imcache</url>
	<description>Imcache is a Java Caching Library. It supports various kinds of caching models that have been applied so far. Imcache intends to speed up applications by providing a means to manage cached data. It offers solutions ranging from small applications to large scale applications.</description>

	<modules>
		<module>imcache</module>
		<module>imcache-examples</module>
		<module>imcache-spring</module>
		<module>imcache-offheap</module>
		<module>imcache-core</module>
		<module>imcache-redis</module>
	</modules>
	<properties>
		<org.springframework.version>4.0.0.RELEASE</org.springframework.version>
		<mockito.version>1.8.4</mockito.version>
		<junit.version>4.11</junit.version>
		<sourceEncoding>UTF-8</sourceEncoding>
	</properties>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<scm>
		<connection>scm:git:git@github.com:Cetsoft/imcache.git</connection>
		<developerConnection>scm:git:git@github.com:Cetsoft/imcache.git</developerConnection>
		<url>https://github.com/Cetsoft/imcache</url>
		<tag>imcache-0.1.2</tag>
	</scm>
	<developers>
		<developer>
			<name>Yusuf Aytas</name>
			<organization>Cetsoft</organization>
			<email>yusufaytas@cetsoft.com</email>
			<organizationUrl>http://www.cetsoft.com</organizationUrl>
			<url>http://www.yusufaytas.com</url>
			<roles>
				<role>Software Engineer</role>
			</roles>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.2</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-scm-plugin</artifactId>
						<version>1.8.1</version>
					</dependency>
				</dependencies>
			</plugin>
<!-- 			<plugin> -->
<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
<!-- 				<artifactId>maven-gpg-plugin</artifactId> -->
<!-- 				<version>1.5</version> -->
<!-- 				<executions> -->
<!-- 					<execution> -->
<!-- 						<id>sign-artifacts</id> -->
<!-- 						<phase>verify</phase> -->
<!-- 						<goals> -->
<!-- 							<goal>sign</goal> -->
<!-- 						</goals> -->
<!-- 					</execution> -->
<!-- 				</executions> -->
<!-- 			</plugin> -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
		</plugins>
	</build>
	<organization>
		<name>Cetsoft</name>
		<url>http://cetsoft.com/</url>
	</organization>
	<distributionManagement>
		<downloadUrl>https://oss.sonatype.org</downloadUrl>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${org.springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${org.springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${org.springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${org.springframework.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cetsoft</groupId>
				<artifactId>imcache</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cetsoft</groupId>
				<artifactId>imcache-examples</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cetsoft</groupId>
				<artifactId>imcache-spring</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cetsoft</groupId>
				<artifactId>imcache-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cetsoft</groupId>
				<artifactId>imcache-offheap</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.cetsoft</groupId>
				<artifactId>imcache-redis</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>